roles/opensearch/files/k8s/manifests/httproute.yaml
---
apiVersion: apisix.apache.org/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: opensearch-http-backend
  namespace: gabiacloud-s3
  labels:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch
    app.kubernetes.io/component: opensearch
    app.kubernetes.io/managed-by: taskfile
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: opensearch
      sectionName: http
  scheme: http
  passHost: pass
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opensearch
  namespace: gabiacloud-s3
  labels:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch
    app.kubernetes.io/component: opensearch
    app.kubernetes.io/managed-by: taskfile
spec:
  parentRefs:
    - name: public
      namespace: apisix
      sectionName: http
    - name: public
      namespace: apisix
      sectionName: apps-https
  hostnames:
    - opensearch.apps.jamie.kr
  rules:
    - name: opensearch
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opensearch
          port: 9200
